<resources>
    <string name="app_name">Story App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Order</string>
    <string name="title_notifications">Profile</string>
    <string name="ini_adalah_icon_ok">ini adalah icon ok</string>
    <string name="register">Sign Up Now</string>
    <string name="nama">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="register_success">Register success</string>
    <string name="register_fail">Register fail</string>
    <string name="login_success">Login success</string>
    <string name="login_fail">Login fail</string>
    <string name="email_warning">Wrong email format</string>
    <string name="password_warning">Password must have at least 6 characters</string>
    <string name="name_warning">Name can\'t be empty</string>
    <string name="description">description</string>
    <string name="logout">Logout</string>
    <string name="language_setting">Change Language</string>
    <string name="add_story_menu">Add Story</string>
    <string name="fail_load_stories">Stories failed to load</string>
    <string name="success_load_stories">Stories success to load</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="fail_take_picture">Fail to take picture</string>
    <string name="fail_show_camera">Fail to show camera</string>
    <string name="permission_denied">Permission denied</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
</resources>