<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="675dp"
        android:background="#FFF"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="26dp"
        android:paddingRight="24dp"
        tools:layout_editor_absoluteY="56dp">

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nama" />

        <EditText
            android:id="@+id/etFullname"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="Type your full name"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="Type your email address"
            android:padding="10dp" />

        <TextView
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="Type your password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:textAllCaps="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>